service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parcel-info-360
  namespace: fast-platform
  labels:
    platform: fast
    module: core
    domain: gis
    api: parcel-info
    app: ws-360
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    platform: fast
    module: core
    domain: gis
    api: parcel-info
    app: ws-360
  type: ClusterIP
